@@ -1,25 +1,36 @@
 package com.sky.tv.comics.service;
 
-import com.sky.tv.comics.dto.ComicAnalysisDTO;
 import com.sky.tv.comics.dto.ComicDTO;
-import com.sky.tv.comics.dto.paging.PagingResponse;
+import com.sky.tv.comics.dto.GroupEnum;
+import com.sky.tv.comics.dto.request.GetComicPaging;
+import com.sky.tv.comics.dto.request.GetTypeDTO;
+import com.sky.tv.comics.dto.response.BundlePagingResponse;
+import com.sky.tv.comics.dto.response.PagingResponse;
+import com.sky.tv.comics.entity.Category;
+import com.sky.tv.comics.entity.CategoryEnum;
 import com.sky.tv.comics.entity.Comic;
-import com.sky.tv.comics.entity.ComicAnalysis;
+import com.sky.tv.comics.entity.GroupComic;
+import com.sky.tv.comics.entity.custom.TopComicView;
 import com.sky.tv.comics.exception.ComicBusinessException;
 import com.sky.tv.comics.exception.ResourceNotFoundException;
 import com.sky.tv.comics.mapper.AutoComicMapper;
+import com.sky.tv.comics.repository.CategoryRepo;
 import com.sky.tv.comics.repository.ComicAnalysisRepo;
 import com.sky.tv.comics.repository.ComicRepo;
+import com.sky.tv.comics.repository.GroupComicRepo;
 import com.sky.tv.comics.service.feignclient.EmployeeFeignClient;
 import com.sky.tv.comics.utils.DateUtils;
 import jakarta.validation.Valid;
 import java.text.ParseException;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.TimeZone;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
@@ -27,9 +38,15 @@ import org.springframework.web.reactive.function.client.WebClient;
 @Service
 public class ComicServiceImpl implements ComicService, BaseService<ComicDTO> {
 
+  public static final String ALL = "ALL";
+
   private final ComicAnalysisRepo comicAnalysisRepo;
 
-  private final ComicRepo comicRepository;
+  private final ComicRepo comicRepo;
+
+  private final GroupComicRepo groupComicRepo;
+
+  private final CategoryRepo categoryRepo;
 
   private final WebClient webClient;
 
@@ -37,8 +54,8 @@ public class ComicServiceImpl implements ComicService, BaseService<ComicDTO> {
 
   @Override
   public ComicDTO get(UUID id) {
-    Comic comic = comicRepository.findById(id)
-        .orElseThrow(() -> new ResourceNotFoundException(ComicRepo.RESOURCE,
+    Comic comic = comicRepo.findById(id)
+                           .orElseThrow(() -> new ResourceNotFoundException("Comic",
             "id",
             id.toString()
         ));
@@ -46,7 +63,7 @@ public class ComicServiceImpl implements ComicService, BaseService<ComicDTO> {
   }
 
   public List<ComicDTO> get(List<UUID> ids) {
-    List<Comic> comics = comicRepository.findAllById(ids);
+    List<Comic> comics = comicRepo.findAllById(ids);
     return comics.stream()
         .map(AutoComicMapper.MAPPER::mapToComicDto)
         .toList();
@@ -57,48 +74,120 @@ public class ComicServiceImpl implements ComicService, BaseService<ComicDTO> {
     List<Comic> comics = comicDTOs.stream()
         .map(AutoComicMapper.MAPPER::mapToComic)
         .toList();
-    comicRepository.saveAll(comics);
+    comicRepo.saveAll(comics);
   }
 
   @Override
   public void update(@Valid List<ComicDTO> comicDTOs) throws ComicBusinessException {
-    List<UUID> ids = comicDTOs.stream().map(ComicDTO::getId).collect(Collectors.toList());
-    List<Comic> comics = comicRepository.findAllById(ids);
+    List<UUID> ids = comicDTOs.stream().map(ComicDTO::getId).toList();
+    List<Comic> comics = comicRepo.findAllById(ids);
     if (comics.size() != ids.size()) {
       throw new ComicBusinessException("Can't find out the entity with your DTOs");
     }
     List<Comic> comicsFromDTO = comicDTOs.stream()
         .map(AutoComicMapper.MAPPER::mapToComic)
         .toList();
-    comicRepository.saveAll(comicsFromDTO);
+    comicRepo.saveAll(comicsFromDTO);
   }
 
   @Override
   public List<ComicDTO> getPopular(int quality) throws ParseException {
     String startDate = DateUtils.fromDateToString(new Date(), TimeZone.getDefault());
     String endDate = DateUtils.addDay(startDate, -7);
-    List<ComicAnalysis> comicAnalyses = comicAnalysisRepo.getComicAnalysisByView(startDate,
-        endDate,
-        quality);
-    List<Comic> comics = comicAnalyses.stream().map(ComicAnalysis::getComic).toList();
+    List<TopComicView> topComicViews = comicAnalysisRepo.getComicAnalysisByView(startDate,
+                                                                                endDate,
+                                                                                quality);
+    List<Comic> comics = topComicViews.stream().map(TopComicView::getComic).toList();
     return comics.stream().map(AutoComicMapper.MAPPER::mapToComicDto).toList();
   }
 
   @Override
-  public PagingResponse<ComicDTO> getComicByCategories(int pageNumber, int pageSize,
-      List<String> categories) {
-    return null;
+  public List<BundlePagingResponse<ComicDTO>> getComicPaging(GetComicPaging paging) {
+    List<BundlePagingResponse<ComicDTO>> result = new ArrayList<>();
+    if(paging.getTypeDTO() == GetTypeDTO.CATEGORY) {
+        result = getComicPagingCategory(paging);
+    } else if(paging.getTypeDTO() == GetTypeDTO.GROUP) {
+        result = getComicPagingGroup(paging);
+    }
+    return result;
   }
 
-  @Override
-  public PagingResponse<ComicDTO> getComicByCategory(int pageNumber, int pageSize,
-      String category) {
-    return null;
+  private List<BundlePagingResponse<ComicDTO>> getComicPagingCategory (GetComicPaging paging) {
+    List<BundlePagingResponse<ComicDTO>> result;
+    List<String> names = paging.getNames();
+    if (names.size() == 1 && ALL.equals(names.get(0))) {
+      List<Category> categories = categoryRepo.findAll();
+      result = getComicByCategories(categories, paging.getPageSize(), paging.getPageNumber());
+    } else {
+      List<CategoryEnum> categoryEnums = names.stream().map(CategoryEnum::valueOf).toList();
+      List<Category> categories = categoryRepo.findAllByNameIn(categoryEnums);
+      result = getComicByCategories(categories, paging.getPageSize(), paging.getPageNumber());
+    }
+    return result;
   }
 
-  @Override
-  public PagingResponse<ComicDTO> getComics(int pageNumber, int pageSize) {
-    return null;
+  private List<BundlePagingResponse<ComicDTO>> getComicPagingGroup (GetComicPaging paging) {
+    List<BundlePagingResponse<ComicDTO>> result = new ArrayList<>();
+    List<String> names = paging.getNames();
+    if (names.size() == 1 && ALL.equals(names.get(0))) {
+      List<GroupComic> groups = groupComicRepo.findAll();
+      for (GroupComic group : groups){
+        List<Category> categories = new ArrayList<>(group.getCategories());
+        List<BundlePagingResponse<ComicDTO>> comicResult = getComicByCategories(
+            categories,
+            paging.getPageSize(),
+            paging.getPageNumber()
+        );
+        result.add(buildBundleGroupComic(comicResult, group.getGroupName(), paging.getPageNumber(), paging.getPageSize()));
+      }
+    } else {
+      List<GroupEnum> groupEnums = names.stream().map(GroupEnum::valueOf).toList();
+      List<GroupComic> groups = groupComicRepo.findAllByNameIn(groupEnums);
+      for (GroupComic group : groups){
+        List<Category> categories = new ArrayList<>(group.getCategories());
+        List<BundlePagingResponse<ComicDTO>> comicResult = getComicByCategories(
+            categories,
+            paging.getPageSize(),
+            paging.getPageNumber()
+        );
+        result.add(buildBundleGroupComic(comicResult, group.getGroupName(), paging.getPageNumber(), paging.getPageSize()));
+      }
+    }
+    return result;
+  }
+
+
+  private BundlePagingResponse<ComicDTO> buildBundleGroupComic(List<BundlePagingResponse<ComicDTO>> bundlePagingResponses, GroupEnum name, int pageNumber, int pageSize) {
+    BundlePagingResponse<ComicDTO> result = new BundlePagingResponse<>();
+    if(bundlePagingResponses == null || bundlePagingResponses.isEmpty()) return result;
+    int count = 0;
+    List<ComicDTO> comics = new ArrayList<>();
+    int number = (int) Math.ceil((double) pageSize / bundlePagingResponses.size());
+    for (BundlePagingResponse<ComicDTO> bundle : bundlePagingResponses){
+      int end = Math.min(number, bundle.getContent().size());
+      comics.addAll(bundle.getContent().subList(0, end));
+      count += end;
+    }
+    result.setName(name.name());
+    result.setPageNumber(pageNumber);
+    result.setPageSize(count);
+    result.setContent(comics);
+    return result;
+  }
+
+  private List<BundlePagingResponse<ComicDTO>> getComicByCategories(List<Category> categories, int pageNumber, int pageSize) {
+    List<BundlePagingResponse<ComicDTO>> pagingResponses = new ArrayList<>();
+    Pageable pageable = PageRequest.of(pageNumber, pageSize);
+    for(Category category : categories) {
+      List<Comic> comics =  comicRepo.findAllByCategory(category, pageable);
+      List<ComicDTO> comicDTOS = comics.stream().map(AutoComicMapper.MAPPER::mapToComicDto).toList();
+      BundlePagingResponse<ComicDTO> pagingResponse = new BundlePagingResponse<>(category.getName().name());
+      pagingResponse.setContent(comicDTOS);
+      pagingResponse.setPageSize(pageSize);
+      pagingResponse.setPageNumber(pageNumber);
+      pagingResponses.add(pagingResponse);
+    }
+    return pagingResponses;
   }
 
   //	@CircuitBreaker(name = "${spring.application.name}", fallbackMethod = "getDefaultEmployee")
